--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Imports:
     ggplot2,
     stringr,
     Matrix,
-    MASS
+    MASS,
+    magrittr
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
@@ -25,8 +26,7 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-URL: https://github.com/username/plausiblebounds
-BugReports: https://github.com/username/plausiblebounds/issues
+URL: https://github.com/username/plausibounds
+BugReports: https://github.com/username/plausibounds/issues
 VignetteBuilder: knitr
 Config/Needs/website: quarto, rmarkdown
-
