--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,12 @@ Package: plausibounds
 Title: Plausible Bounds for Treatment Path Estimates
 Version: 0.1.0
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Ryan",
+           family = "Kobler",
            role = c("aut", "cre"),
-           email = "first.last@example.com")
+           email = "ryan.kobler@phil.frb.org")
 Description: Provides tools for calculating and visualizing plausible bounds
-    for event study estimates. Includes functions for calculating cumulative
+    for treatment path estimates. Includes functions for calculating cumulative
     bounds, restricted bounds, and visualizing the results.
 License: MIT + file LICENSE
 Depends: 
@@ -15,12 +15,13 @@ Depends:
 Imports:
     dplyr,
     ggplot2,
-    stringr,
     Matrix,
     MASS,
     magrittr,
     cli
 Suggests: 
+    doParallel,
+    foreach,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
@@ -29,5 +30,4 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://github.com/username/plausibounds
 BugReports: https://github.com/username/plausibounds/issues
-VignetteBuilder: knitr
 Config/Needs/website: quarto, rmarkdown
