--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,8 @@ Authors@R:
            family = "Kobler",
            role = c("aut", "cre"),
            email = "kobleary@gmail.com")
-Description: Provides tools for calculating and visualizing plausible bounds
-    for treatment path estimates as in Freyaldenhoven (2025). Includes functions for calculating bounds and visualizing the results.
+Description: Calculate and visualize plausible bounds as proposed in Freyaldenhoven (2025)
+    for dynamic treatment path estimates. Given a treatment path, variance matrix, and significance level, plot various uncertainty measures cleanly with `plausible_bounds()` and `create_plot()`.
 License: MIT + file LICENSE
 Depends: 
     R (>= 3.5)
@@ -19,6 +19,8 @@ Imports:
     magrittr,
     cli
 Suggests: 
+    knitr,
+    rmarkdown,
     doParallel,
     foreach,
     testthat (>= 3.0.0)
@@ -27,6 +29,7 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
-URL: https://github.com/username/plausibounds
-BugReports: https://github.com/username/plausibounds/issues
+URL: https://github.com/SimonFreyaldenhoven/plausibounds
+BugReports: https://github.com/SimonFreyaldenhoven/plausibounds/issues
+VignetteBuilder: knitr
 Config/Needs/website: quarto, rmarkdown
