--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,17 @@ Package: plausibounds
 Title: Plausible Bounds for Treatment Path Estimates
 Version: 0.1.0
 Authors@R: 
+c(person(given = "Simon",
+           family = "Freyaldenhoven",
+           role = c("aut")),
+    person(given = "Christian",
+           family = "Hansen",
+           role = c("aut")),
     person(given = "Ryan",
            family = "Kobler",
            role = c("aut", "cre"),
            email = "kobleary@gmail.com")
-Description: Calculate and visualize plausible bounds as proposed in Freyaldenhoven and Hansen (2026)
-    for dynamic treatment path estimates. Given a treatment path, variance matrix, and significance level, plot various uncertainty measures cleanly with `plausible_bounds()` and `create_plot()`.
+Description: Implements the additions to dynamic effect plots suggested in Freyaldenhoven and Hansen (2026). Data-driven smoothing delivers a smooth estimated path with potentially improved point estimation properties and confidence regions covering a surrogate that can be substantially tighter than conventional pointwise or uniform bands.
 License: MIT + file LICENSE
 Depends: 
     R (>= 3.5)
