--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,11 @@
 Package: plausibounds
 Title: Plausible Bounds for Treatment Path Estimates
 Version: 0.1.0
-Authors@R: 
-c(person(given = "Simon",
-           family = "Freyaldenhoven",
-           role = c("aut")),
-    person(given = "Christian",
-           family = "Hansen",
-           role = c("aut")),
-    person(given = "Ryan",
-           family = "Kobler",
-           role = c("aut", "cre"),
-           email = "kobleary@gmail.com")
+Authors@R: c(
+    person("Simon", "Freyaldenhoven", , "simon.freyaldenhoven@phil.frb.org", role = c("aut", "cph")),
+    person("Christian", "Hansen", , "chansen1@chicagobooth.edu", role = c("aut", "cph")),
+    person("Ryan", "Kobler", , "kobleary@gmail.com", role = c("aut", "cre"))
+  )
 Description: Implements the additions to dynamic effect plots suggested in Freyaldenhoven and Hansen (2026). Data-driven smoothing delivers a smooth estimated path with potentially improved point estimation properties and confidence regions covering a surrogate that can be substantially tighter than conventional pointwise or uniform bands.
 License: MIT + file LICENSE
 Depends: 
